--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(windows_fido_bridge)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -12,6 +12,10 @@ find_package(Boost REQUIRED)
 
 find_package(nlohmann_json REQUIRED)
 find_package(fmt REQUIRED)
+
+enable_testing()
+find_package(GTest REQUIRED)
+include(GoogleTest)
 
 add_subdirectory(common)
 
