--- a/linux_client/CMakeLists.txt
+++ b/linux_client/CMakeLists.txt
@@ -1,17 +1,52 @@
 project(linux_client)
 
-#add_library(${PROJECT_NAME} SHARED
-add_executable(${PROJECT_NAME}
-    src/binary_io.cpp
+#
+# Library
+#
+
+add_library(${PROJECT_NAME} SHARED
+    src/cbor.cpp
     src/linux_client.cpp
+    src/util.cpp
 )
 
-target_link_libraries(
+target_link_libraries(${PROJECT_NAME}
+    common
+
+    Boost::boost
+    nlohmann_json::nlohmann_json
+    fmt::fmt
+)
+
+#
+# Tests
+#
+
+set(test_target ${PROJECT_NAME}_tests)
+add_executable(${test_target}
+    test/test_cbor.cpp
+)
+
+target_link_libraries(${test_target}
     ${PROJECT_NAME}
-    PRIVATE
-        common
 
-        Boost::boost
-        nlohmann_json::nlohmann_json
-        fmt::fmt
+    GTest::GTest
+    GTest::Main
 )
+
+gtest_discover_tests(${test_target})
+
+target_include_directories(${test_target}
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
+
+#
+# Scratch
+#
+
+add_executable(${PROJECT_NAME}_scratch
+    src/scratch.cpp
+)
+
+target_link_libraries(${PROJECT_NAME}_scratch ${PROJECT_NAME})
