First end-to-end working prototype

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,15 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.13)
 project(windows_fido_bridge)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_STANDARD 20)
 
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH})
-
-set(Boost_USE_STATIC_LIBS ON)
-find_package(Boost REQUIRED)
 
 find_package(nlohmann_json REQUIRED)
 find_package(fmt REQUIRED)
 
 enable_testing()
-find_package(GTest REQUIRED)
+find_package(GTest)
 include(GoogleTest)
 
 add_subdirectory(common)
