--- a/linux_client/CMakeLists.txt
+++ b/linux_client/CMakeLists.txt
@@ -6,37 +6,15 @@ project(linux_client)
 
 add_library(${PROJECT_NAME} SHARED
     src/bridge.cpp
-    src/cbor.cpp
     src/linux_client.cpp
     src/posix_pipe.cpp
+    src/webauthn.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
+    cbor
     common
 
     nlohmann_json::nlohmann_json
     fmt::fmt
-)
-
-#
-# Tests
-#
-
-set(test_target ${PROJECT_NAME}_tests)
-add_executable(${test_target}
-    test/test_cbor.cpp
-)
-
-target_link_libraries(${test_target}
-    ${PROJECT_NAME}
-
-    GTest::GTest
-    GTest::Main
-)
-
-gtest_discover_tests(${test_target})
-
-target_include_directories(${test_target}
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
