--- a/windows_server/CMakeLists.txt
+++ b/windows_server/CMakeLists.txt
@@ -1,16 +1,29 @@
 project(windows_server)
 
-add_executable(
-    ${PROJECT_NAME}
-
-    windows_server.cpp
+add_executable(${PROJECT_NAME}
+    src/windows_error.cpp
+    src/windows_server.cpp
+    src/windows_util.cpp
 )
 
-target_link_libraries(
-    ${PROJECT_NAME}
+target_include_directories(${PROJECT_NAME}
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/3p-include
+)
+
+target_link_libraries(${PROJECT_NAME}
+    cbor
     common
 
     -static-libgcc
     -static-libstdc++
     "/mnt/c/Program Files (x86)/Windows Kits/10/Lib/10.0.18362.0/um/x64/webauthn.lib"
+)
+
+target_compile_definitions(${PROJECT_NAME}
+    PRIVATE
+        _UNICODE
+
+        # Windows 10
+        WINVER=0x0A00
+        _WIN32_WINNT=0x0A00
 )
