--- a/src/cbor/CMakeLists.txt
+++ b/src/cbor/CMakeLists.txt
@@ -4,9 +4,7 @@ project(cbor)
 # Library
 #
 
-add_library(
-    ${PROJECT_NAME} STATIC
-
+add_library(${PROJECT_NAME} STATIC
     src/types/array.cpp
     src/types/integer.cpp
     src/types/value.cpp
@@ -15,8 +13,7 @@ add_library(
     src/parse.cpp
 )
 
-target_include_directories(
-    ${PROJECT_NAME}
+target_include_directories(${PROJECT_NAME}
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
@@ -24,16 +21,14 @@ target_include_directories(
         src
 )
 
-target_link_libraries(
-    ${PROJECT_NAME}
+target_link_libraries(${PROJECT_NAME}
     PUBLIC
         common
 
         fmt::fmt
 )
 
-set_property(
-    TARGET ${PROJECT_NAME}
+set_property(TARGET ${PROJECT_NAME}
     PROPERTY POSITION_INDEPENDENT_CODE ON
 )
 
