--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,15 +1,12 @@
 project(common)
 
-add_library(
-    ${PROJECT_NAME} STATIC
-
+add_library(${PROJECT_NAME} STATIC
     src/communication.cpp
     src/exceptions.cpp
     src/util.cpp
 )
 
-target_include_directories(
-    ${PROJECT_NAME}
+target_include_directories(${PROJECT_NAME}
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
@@ -17,13 +14,11 @@ target_include_directories(
         src
 )
 
-target_link_libraries(
-    ${PROJECT_NAME}
+target_link_libraries(${PROJECT_NAME}
     PUBLIC
         fmt::fmt
 )
 
-set_property(
-    TARGET ${PROJECT_NAME}
+set_property(TARGET ${PROJECT_NAME}
     PROPERTY POSITION_INDEPENDENT_CODE ON
 )
