--- a/src/linux/CMakeLists.txt
+++ b/src/linux/CMakeLists.txt
@@ -1,14 +1,14 @@
-project(linux_client)
-
-#
-# Library
-#
+project(windowsfidobridge)
 
 add_library(${PROJECT_NAME} SHARED
     src/bridge.cpp
     src/linux_client.cpp
     src/posix_pipe.cpp
     src/webauthn.cpp
+)
+
+target_include_directories(${PROJECT_NAME}
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/3p-include
 )
 
 target_link_libraries(${PROJECT_NAME}
