--- a/src/linux/CMakeLists.txt
+++ b/src/linux/CMakeLists.txt
@@ -2,7 +2,7 @@ project(windowsfidobridge)
 
 add_library(${PROJECT_NAME} SHARED
     src/bridge.cpp
-    src/linux_client.cpp
+    src/openssh_sk_middleware.cpp
     src/posix_pipe.cpp
     src/webauthn.cpp
 )
@@ -16,4 +16,11 @@ target_link_libraries(${PROJECT_NAME}
     common
 
     fmt::fmt
+
+    # GCC 8 std::filesystem support
+    stdc++fs
+)
+
+install(TARGETS ${PROJECT_NAME}
+    LIBRARY DESTINATION lib
 )
