Dynamically link to webauthn.dll at runtime, add install instructions

--- a/src/windows/CMakeLists.txt
+++ b/src/windows/CMakeLists.txt
@@ -2,6 +2,7 @@ project(windowsfidobridge)
 
 add_executable(${PROJECT_NAME}
     src/main.cpp
+    src/webauthn_linking.cpp
     src/window.cpp
     src/windows_error.cpp
     src/windows_util.cpp
@@ -17,9 +18,6 @@ target_link_libraries(${PROJECT_NAME}
 
     -static-libgcc
     -static-libstdc++
-
-    # TODO: don't hardcode this
-    "/mnt/c/Program Files (x86)/Windows Kits/10/Lib/10.0.18362.0/um/x64/webauthn.lib"
 )
 
 target_compile_definitions(${PROJECT_NAME}
