Directly build 3P dependencies from source
This is done for a few reasons, chief among them the ability to run CBOR
tests for the Windows target and to allow the use of spdlog in the
Windows target in the near future.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(windows-fido-bridge)
 
 option(BUILD_LINUX_TARGET "Build the Linux OpenSSH middleware library" ON)
 option(BUILD_WINDOWS_TARGET "Build the Windows WebAuthN API bridge executable" ON)
+option(BUILD_TESTS "Build tests" ON)
 
 # Used to prevent two copies of the Windows bridge executable from being
 # included in a CPack package.
@@ -10,15 +11,27 @@ option(BUILD_WINDOWS_TARGET "Build the Windows WebAuthN API bridge executable" O
 # The default component name (if not specified in an install() command) is
 # literally "Unspecified" sans quotes, see docs here:
 # https://cmake.org/cmake/help/v3.16/variable/CMAKE_INSTALL_DEFAULT_COMPONENT_NAME.html
-option(WINDOWS_TARGET_COMPONENT_NAME "The component to install the Windows executable to" Unspecified)
+option(WINDOWS_TARGET_COMPONENT_NAME "The component to install the Windows executable into" Unspecified)
 
-set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH})
 
-find_package(fmt REQUIRED)
+set(CMAKE_CXX_STANDARD 20)
 
-enable_testing()
-find_package(GTest)
+# Needed to link static libfmt.a into the Linux shared library target.
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+include(DetectWSL)
+
+# 3P dependencies.
+include(BuildMingwStdThreads)
+include(BuildFmt)
+include(BuildSpdlog)
+include(BuildGoogleTest)
+
+if (BUILD_TESTS)
+    enable_testing()
+endif()
+
 include(GoogleTest)
 
 add_subdirectory(src/common)
@@ -40,13 +53,35 @@ if (BUILD_LINUX_TARGET AND BUILD_WINDOWS_TARGET)
         CMAKE_ARGS
             -DBUILD_LINUX_TARGET=OFF
             -DBUILD_WINDOWS_TARGET=ON
-            -DCMAKE_BUILD_TYPE=$<CONFIG>
-            -DCMAKE_INSTALL_PREFIX=${windows_install_dir}
-            -DCMAKE_TOOLCHAIN_FILE=${CMAKE_SOURCE_DIR}/cmake/toolchain-mingw64.cmake
+            "-DCMAKE_BUILD_TYPE=$<CONFIG>"
+            "-DCMAKE_INSTALL_PREFIX=${windows_install_dir}"
+            "-DCMAKE_TOOLCHAIN_FILE=${CMAKE_SOURCE_DIR}/cmake/toolchain-mingw64.cmake"
             -DWINDOWS_TARGET_COMPONENT_NAME=nested-windows
+            "-DBUILD_TESTS=${BUILD_TESTS}"
+
+            # Reuse the 3P source trees we've already downloaded in the nested
+            # build.
+            "-Dfmt_POPULATED=${fmt_POPULATED}"
+            "-Dfmt_SOURCE_DIR=${fmt_SOURCE_DIR}"
+            "-Dfmt_BINARY_DIR=<BINARY_DIR>/_deps/fmt-build"
+            "-Dspdlog_POPULATED=${spdlog_POPULATED}"
+            "-Dspdlog_SOURCE_DIR=${spdlog_SOURCE_DIR}"
+            "-Dspdlog_BINARY_DIR=<BINARY_DIR>/_deps/spdlog-build"
+            "-Dgoogletest_POPULATED=${googletest_POPULATED}"
+            "-Dgoogletest_SOURCE_DIR=${googletest_SOURCE_DIR}"
+            "-Dgoogletest_BINARY_DIR=<BINARY_DIR>/_deps/googletest-build"
         BUILD_ALWAYS ON
     )
 
+    ExternalProject_Get_Property(nested_windows BINARY_DIR)
+
+    # Run the nested build's tests as a part of the main build's tests.
+    add_test(
+        NAME nested_windows_tests
+        COMMAND "${CMAKE_COMMAND}" --build "${BINARY_DIR}" --target test
+    )
+
+    # Install the nested build's artifacts into the main build.
     install(DIRECTORY ${windows_install_dir}/
         DESTINATION .
         USE_SOURCE_PERMISSIONS
