Various clean ups, QoL improvements around user verification/PIN entry
- If a user enrolls a new SK key with the application name set to
  "ssh:windows-fido-bridge-verify-required", the middleware will now
  forcibly require user verification regardless of what flags OpenSSH
  passes to it. This is to make the user experience around PIN entry
  better: telling OpenSSH that we want user verification via, e.g.
  `ssh-keygen -O verify-required` causes OpenSSH to prompt for a PIN
  that the middleware can't even use because Microsoft's WebAuthn API
  doesn't allow us to specify it. Still TODO is update the README
  with documentation about this.
- Move the FIDO signature parser to use binary_reader for better
  safety.
- Add machinery for creating custom exceptions.
- Add some debug logging to the middleware which can be turned on
  with an environment variable. Still TODO is to update the README
  with documentation about this.
- Make cbor_map.operator[] and .at() work more like the standard
  library's map.
- Add null support to the CBOR serde to allow one to instantiate a
  cbor_value with no arguments, which makes cbor_map.operator[]
  nicer to use in support of the above.
- Error out if we see a required option from OpenSSH that we don't
  recognize.
- Other minor clean ups.

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(${PROJECT_NAME} STATIC
 
     src/cbor/types/array.cpp
     src/cbor/types/integer.cpp
+    src/cbor/types/null.cpp
     src/cbor/types/value.cpp
     src/cbor/detail.cpp
     src/cbor/parse.cpp
