--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -23,6 +23,7 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
         fmt
+        spdlog
 )
 
 set_property(TARGET ${PROJECT_NAME}
