Major reorganization, primarily to support Cygwin
Previously, the code to call the Windows WebAuthn APIs and the code to parse the
outputs from those APIs into a format that OpenSSH could consume were separated
between the Linux and Windows components. A better way, assuming you only care
about targeting Windows (which, in this case, we do), is to have everything,
including the OpenSSH conversion code, inside a single common Windows component
and create thin entrypoints depending on whether you're invoking from WSL or
from a native Windows environment (or at least closer to native than WSL, in
Cygwin's case).

After combining the code, we now have two primary entry points: one from WSL
which uses the traditional .so -> .exe bridging concept that was implemented
originally, and one from Cygwin that uses a single Windows .dll. Theoretically
one could use the Cygwin-compiled Windows .dll with OpenSSH compiled with Visual
Studio, though I've found it runs into issues when passing data back to OpenSSH
due to the Cygwin runtime and MSVCRT having different allocators (OpenSSH
assumes ownership of memory allocated within the middleware :/).

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,8 +1,18 @@
 project(common)
 
+# Create a shim that points sk-api.h to the version we're targeting
+set(sk_api_shim_dir_path ${CMAKE_CURRENT_BINARY_DIR}/sk-api-shim)
+file(MAKE_DIRECTORY ${sk_api_shim_dir_path})
+execute_process(
+    COMMAND ${CMAKE_COMMAND} -E create_symlink
+        "${CMAKE_CURRENT_SOURCE_DIR}/3p-include/sk-api-v${SK_API_VERSION}.h"
+        "${sk_api_shim_dir_path}/sk-api.h"
+)
+
 add_library(${PROJECT_NAME} STATIC
     src/communication.cpp
     src/exceptions.cpp
+    src/openssh.cpp
     src/util.cpp
 
     src/cbor/types/array.cpp
@@ -15,7 +25,7 @@ add_library(${PROJECT_NAME} STATIC
 target_include_directories(${PROJECT_NAME}
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-        $<INSTALL_INTERFACE:include>
+        $<BUILD_INTERFACE:${sk_api_shim_dir_path}>
     PRIVATE
         src
 )
